--- a/HTMLpratice/晴中有佳雨.HTML
+++ b/HTMLpratice/晴中有佳雨.HTML
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>佳雨哦齁齁</title>
 </head>
 <body>
 <H1><b>                晴中有佳雨专属视奸网站</b></H1>
@@ -59,4 +59,5 @@
  
 <img src="" alt="">
 </body>
+
 </html> 
